syntax = "proto3";

option csharp_namespace = "Spiffe.Sample.Grpc.Tls";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
}

message HelloReply {
  string message = 1;
}
